# RayTracerAvalonia

./: README.md  RayTracerAvalonia.sln
RayTracerAvalonia/: App.axaml  App.axaml.cs  RayTracerAvalonia.csproj
RayTracerAvalonia.Browser/: Program.cs  RayTracerAvalonia.Browser.csproj
RayTracerAvalonia.Browser/Properties/: launchSettings.json
RayTracerAvalonia.Desktop/: Program.cs  RayTracerAvalonia.Desktop.csproj  run.sh
RayTracerAvalonia.Desktop/cpp_raytracing_engine/: .clangd  CMakeLists.txt  box.cpp  camera.cpp  color.cpp  compile_commands.json  engine.cpp  light.cpp  plane.cpp  ray.cpp  renderer.cpp  scene.cpp  shape.cpp  sphere.cpp
RayTracerAvalonia.Desktop/cpp_raytracing_engine/include/: box.hpp  camera.hpp  color.hpp  engine.hpp  light.hpp  plane.hpp  ray.hpp  renderer.hpp  scene.hpp  shape.hpp  sphere.hpp
RayTracerAvalonia/RayTracing/: Appearance.cs  Camera.cs  Color.cs  IMaterial.cs  Intersection.cs  Light.cs  Material.cs  Ray.cs  Renderer.cs  Scene.cs
RayTracerAvalonia/RayTracing/Cpp/: CppInterop.cs
RayTracerAvalonia/RayTracing/Examples/: ExampleScenes.cs
RayTracerAvalonia/RayTracing/Extensions/: VectorExtensions.cs
RayTracerAvalonia/RayTracing/Shapes/: Box.cs  IShape.cs  Plane.cs  Sphere.cs
RayTracerAvalonia/ViewModels/: MainViewModel.cs  ViewModelBase.cs
RayTracerAvalonia/Views/: MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs
